# autoware-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
book/: book.toml
book/src/: SUMMARY.md  contributing.md  introduction.md  stub_files.md
book/src/advanced/: localization.md
book/src/api/: tools-spec.md
book/src/appendix/: implementation.md
book/src/architecture/: mcp-integration.md  perception-bridge.md  safety-monitoring.md
book/src/design/: perception-bridge.md  session-management.md
book/src/developer/: api-reference.md  perception-implementation.md  python-client.md
book/src/examples/: quickstart.md  scenarios.md
book/src/getting-started/: claude-desktop-setup.md  installation.md  quickstart.md
book/src/overview/: architecture.md  source-structure.md
book/src/reference/: quick-reference.md  roadmap.md  troubleshooting.md
book/src/user-guide/: autonomous-driving.md  basic-usage.md  core-concepts.md  launch-management.md  vehicle-control.md
docs/: 01-architecture.md  02-components.md  03-api-specification.md  05-development-guide.md  phase1-completed.md  roadmap.md  usage-guide.md
examples/: README.md  autonomous_drive_mcp_tools.py  autonomous_drive_ros_direct.py  launch_management_demo.py  perception_demo.py
scripts/: demo_autonomous_drive.py  migrate_to_uv.sh  monitor_speed.py  monitor_vehicle.py  planning_simulation_mcp.launch.py  rosbag_replay_simulation.launch.xml  run_planning_simulation.sh  talker_listener_demo.launch.py
src/autoware_mcp/: __init__.py  __main__.py  ad_api.py  ad_api_ros2.py  cli.py  config.py  health.py  logging.py  perception_bridge.py  ros2_manager.py  server.py
src/autoware_mcp/launch_manager/: __init__.py  cleanup.py  generator.py  process_tracker.py  session.py  session_manager.py
src/autoware_mcp/perception/: __init__.py  buffer.py  (+6 more)
tests/: README.md  __init__.py  conftest.py  factories.py  test_autoware_tools.py  test_config.py  test_control_tools.py  test_cooperation_tools.py  test_health.py  test_helpers.py  test_integration_autonomous_drive.py  test_launch_manager.py  test_launch_tools_integration.py  test_localization_tools.py  test_mrm_tools.py  test_operation_mode_tools.py  test_perception.py  test_perception_tools.py  test_ros2_manager.py  test_ros2_tools.py  test_routing_tools.py  test_system_tools.py
(+3 files in other folders)
