[project]
name = "autoware-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Autoware autonomous driving stack - passive observation and interaction interface"
authors = [
    { name = "aeon", email = "jerry73204@gmail.com" }
]
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
autoware-mcp = "autoware_mcp.__main__:main"
autoware-mcp-test = "autoware_mcp.cli:run_tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "lark-parser>=0.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/autoware_mcp"]
